# Salesforce-MCP

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  sf_connection.py
tools/: __init__.py  describe_object.py  describe_object_with_api.py  describe_relationship_fields.py  get_fields_by_type.py  get_picklist_values.py  get_validation_rules.py  manage_debug_logs.py  query_records.py  search_objects.py
