[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Salesforce MCP Server that provides API integration tools through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "pip>=25.0.1",
    "requests>=2.32.3",
    "simple-salesforce>=1.12.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
